# knapsack-study

./: .gitignore
analysis/: analysis.ipynb  data.csv
data/knapsack-10/: 10.txt  100.txt  1000.txt  10000.txt  100000.txt  12.txt  14.txt  16.txt  18.txt  20.txt  22.txt  24.txt  26.txt  28.txt  30.txt  32.txt  8.txt
data/knapsack-12/: 10.txt  100.txt  1000.txt  10000.txt  100000.txt  12.txt  14.txt  16.txt  18.txt  20.txt  22.txt  24.txt  26.txt  28.txt  30.txt  32.txt  8.txt
data/knapsack-14/: 10.txt  100.txt  1000.txt  10000.txt  100000.txt  12.txt  14.txt  16.txt  18.txt  20.txt  22.txt  24.txt  26.txt  28.txt  30.txt  32.txt  8.txt
data/knapsack-16/: 10.txt  100.txt  1000.txt  10000.txt  100000.txt  12.txt  14.txt  16.txt  18.txt  20.txt  22.txt  24.txt  26.txt  28.txt  30.txt  32.txt  8.txt
data/knapsack-18/: 10.txt  100.txt  1000.txt  10000.txt  100000.txt  12.txt  14.txt  16.txt  18.txt  20.txt  22.txt  24.txt  26.txt  28.txt  30.txt  32.txt  8.txt
data/knapsack-2/: 10.txt  100.txt  1000.txt  10000.txt  100000.txt
data/knapsack-20/: 10.txt  100.txt  1000.txt  10000.txt  100000.txt  12.txt  14.txt  16.txt  18.txt  20.txt  22.txt  24.txt  26.txt  28.txt  30.txt  32.txt  8.txt
data/knapsack-22/: 10.txt  100.txt  1000.txt  10000.txt  100000.txt  12.txt  14.txt  (+10 more)
generators/: generate.py
src/: CMakeLists.txt  backtracking.cpp  backtracking.hpp  brute-force.cpp  brute-force.hpp  dyn-prog.cpp  dyn-prog.hpp  exhaustive_search.cpp  exhaustive_search.hpp  greedy_method.cpp  greedy_method.hpp  knapsack.hpp  main.cpp
src/lib/: algorithms.cpp  algorithms.hpp
(+164 files in other folders)
